# ConsoleLib

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classcon_1_1Color-members.html  classcon_1_1Color.html  classcon_1_1Console-members.html  classcon_1_1Console.html  classcon_1_1ConsoleColor-members.html  classcon_1_1ConsoleColor.html  classes.html  color_8hpp_source.html  console_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  menudata.js  namespacecon.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces.html  namespaces.js  navtreedata.js
.github/workflows/: Build-Linux.yml  Build-Windows.yml  Documentation.yml  ci-workflow.yml  ci.yml  docs.yml  documentation.yml
docs/: annotated.html  annotated_dup.js  classcon_1_1Color-members.html  classcon_1_1Color.html  classcon_1_1Console.html  classcon_1_1ConsoleColor-members.html  color_8hpp_source.html  console_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  namespacecon.html  namespacecon.js  namespacemembers_eval.html  namespaces.html  navtreeindex0.js
docs/html/: classColor-members.html  classColor.html  classColor.js  classConsole-members.html  classConsole.html  classConsole.js  classConsoleColor-members.html  classConsoleColor.html  classConsoleColor.js  classcon_1_1Color-members.html  classcon_1_1Color.js  classcon_1_1Console-members.html  classcon_1_1Console.js  classcon_1_1ConsoleColor.html  classcon_1_1ConsoleColor.js  classes.html  color_8hpp_source.html  functions_func.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html
docs/html/search/: all_1.js  all_3.js  enumvalues_7.js  functions_0.js
docs/search/: enumvalues_0.js  functions_1.js  functions_4.js
examples/: CMakeLists.txt
examples/errorDisplay/: CMakeLists.txt  error.cpp  error.hpp  main.cpp
examples/testLib/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  MAIN.md  color.hpp  console.hpp
sandbox/: CMakeLists.txt  main.cpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  classes_0.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  functions_0.js  functions_1.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  color.cpp  color.hpp  console.cpp  console.hpp
tests/: CMakeLists.txt  color.test.cpp  consolecolor.test.cpp
